<resources>
    <string name="keyboard_enter_label">ENTER</string>
    <string name="keyboard_go_label">GO</string>
    <string name="keyboard_search_label">SEARCH</string>
    <string name="keyboard_send_label">SEND</string>
    <string name="keyboard_next_label">NEXT</string>
    <string name="keyboard_done_label">DONE</string>
    <string name="keyboard_space_label">space</string>
    <string name="permission_allow">Allow</string>
    <string name="permission_reject">Don’t Allow</string>
    <string name="permission_enable">Enable</string>
    <string name="permission_enabled">Enabled</string>
    <string name="permission_camera">Will you allow %1$s to use your camera?</string>
    <string name="permission_microphone">Will you allow %1$s to use your microphone?</string>
    <string name="permission_camera_and_microphone">Will you allow %1$s to use your camera and microphone?</string>
    <string name="permission_location">Will you allow %1$s to access your location?</string>
    <string name="permission_notification">Will you allow %1$s to send notifications?</string>
    <string name="permission_read_external_storage">Will you allow %1$s to read your external storage?</string>
    <string name="permission_persistent_storage">Will you allow %1$s to store data in persistent storage?</string>
    <string name="settings_crash_reporting">Crash Reporting</string>
    <string name="settings_telemetry">Telemetry</string>
    <string name="settings_privacy_security">Privacy &amp; Security</string>
    <string name="settings_privacy_saved_logins">Saved Logins</string>
    <string name="settings_privacy_logins">Logins And Passwords</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_terms_service">Terms of Service</string>
    <string name="settings_privacy_search_engine_title">Search engine</string>
    <string name="settings_privacy_choose_search_engine_description">Choose your preferred search engine.</string>
    <string name="settings_privacy_choose_search_engine_reset">Reset Search Engine Settings</string>
    <string name="settings_privacy_policy_popups_title_v1">Exceptions for Pop-Ups</string>
    <string name="settings_privacy_policy_popups_description">You can specify which websites are allowed to open pop-up windows</string>
    <string name="settings_privacy_policy_webxr_title">Virtual Reality permissions</string>
    <string name="settings_privacy_policy_webxr_description">The following sites are blocked from letting WebXR API access your VR device.</string>
    <string name="settings_privacy_policy_webxr_empty_description">When you open a website which uses WebXR, you can open a dialog that lets you to block WebXR on that site.</string>
    <string name="settings_privacy_policy_webxr_reset">Reset the sites not allowed to access Virtual Reality devices.</string>
    <string name="settings_privacy_policy_tracking_title">Exceptions for Enhanced Tracking Protection</string>
    <string name="settings_privacy_policy_tracking_description">You’ve turned off protections on these websites.</string>
    <string name="settings_privacy_policy_tracking_empty_description">When you allow a website to track your activity, they will appear here.</string>
    <string name="settings_privacy_policy_tracking_reset">Reset the Exceptions for Enhanced Tracking Protection.</string>
    <string name="settings_privacy_policy_login_exceptions_title">Login Exceptions</string>
    <string name="settings_privacy_policy_login_exceptions_description">Logins that are not saved will be shown here</string>
    <string name="settings_privacy_policy_login_exceptions_empty_description">Logins that are not saved will be shown here.</string>
    <string name="settings_privacy_policy_login_exceptions_reset">Reset the login exceptions.</string>
    <string name="pop_up_site_switch_allow">Allow</string>
    <string name="pop_up_site_switch_block">Block</string>
    <string name="settings_developer_options">Developer Options</string>
    <string name="settings_fxa_account_sign_in">Sign Into Account</string>
    <string name="settings_fxa_account_manage">Manage Account</string>
    <string name="settings_fxa_account_sign_out">Sign Out</string>
    <string name="settings_fxa_account_reconnect">Reconnect</string>
    <string name="settings_language">Language</string>
    <string name="settings_language_follow_device">Follow device language</string>
    <string name="settings_language_settings">Language Settings</string>
    <string name="settings_language_choose_language_webpage_content">Choose your preferred language for displaying pages</string>
    <string name="settings_language_choose_language_voice_search">Choose your preferred language for voice search</string>
    <string name="settings_language_choose_display_language_title">%1$s Display Language</string>
    <string name="settings_language_choose_language_display_description">Choose the language used to display menus, messages, and notifications.</string>
    <string name="settings_language_choose_language_voice_search_service_title">Voice Search Service</string>
    <string name="settings_language_choose_language_voice_search_service_description">Choose your preferred online service for voice search.</string>
    <string name="settings_language_choose_language_voice_search_title">Voice Search Language</string>
    <string name="settings_language_choose_language_voice_search_description">Choose your preferred language for voice search.</string>
    <string name="settings_language_choose_language_content_title">Preferred Website Languages</string>
    <string name="settings_language_choose_language_content_description">Web pages are sometimes offered in more than one language. Choose the languages you want to display in order of preference to the left side.</string>
    <string name="settings_language_english">English (US)</string>
    <string name="settings_language_english_us">English (US)</string>
    <string name="settings_language_english_uk">English (UK)</string>
    <string name="settings_language_traditional_chinese">Chinese (Traditional/Zhuyin)</string>
    <string name="settings_language_simplified_chinese">Chinese (Simplified/Pinyin)</string>
    <string name="settings_language_japanese">Japanese</string>
    <string name="settings_language_french">French</string>
    <string name="settings_language_galician">Galician</string>
    <string name="settings_language_german">German</string>
    <string name="settings_language_spanish">Spanish</string>
    <string name="settings_language_spanish_spain">Spanish (Spain)</string>
    <string name="settings_language_korean">Korean</string>
    <string name="settings_language_italian">Italian</string>
    <string name="settings_language_russian">Russian</string>
    <string name="settings_language_polish">Polish</string>
    <string name="settings_language_danish">Danish</string>
    <string name="settings_language_norwegian">Norwegian</string>
    <string name="settings_language_norwegian_bokmaal">Norwegian (Bokmaal)</string>
    <string name="settings_language_norwegian_nynorsk">Norwegian (Nynorsk)</string>
    <string name="settings_language_swedish">Swedish</string>
    <string name="settings_language_finnish">Finnish</string>
    <string name="settings_language_dutch">Dutch</string>
    <string name="settings_language_thai">Thai</string>
    <string name="settings_display">Display</string>
    <string name="settings_controller_options">Controller Options</string>
    <string name="settings_report_speech_data">Report Speech Data</string>
    <string name="settings_report_issue">Report an Issue</string>
    <string name="settings_version_developer">Developer Build</string>
    <string name="settings_help">Help</string>
    <string name="settings_send_your_feedback">Send us Your Feedback</string>
    <string name="settings_accounts_sign_in">Sign in</string>
    <string name="settings_accounts_sign_out">Sign out</string>
    <string name="settings_accounts_reconnect">Reconnect</string>
    <string name="settings_whats_new">What’s New</string>
    <string name="restart_dialog_restart">Restart Required</string>
    <string name="restart_dialog_text">You must restart %1$s in order to complete changes. Would you like to do that now?</string>
    <string name="restart_now_dialog_button">Restart Now</string>
    <string name="restart_later_dialog_button">Restart Later</string>
    <string name="developer_options_curved_display">Enable Curved Display</string>
    <string name="developer_options_remote_debugging">Enable Remote Debugging</string>
    <string name="developer_options_env_override">Enable Environment Override</string>
    <string name="developer_options_performance_monitor">Enable Performance Monitor</string>
    <string name="developer_options_debug_logging">Enable Debug Logging</string>
    <string name="hardware_acceleration_switch">Enable UI Hardware Acceleration</string>
    <string name="bypass_cache_on_reload_switch">Enable Cache Bypass On Reload</string>
    <string name="multi_e10s_switch">Enable Multi-e10s</string>
    <string name="developer_options_servo">Enable Servo</string>
    <string name="developer_options_clear_cache_cookies_site_description">Cookies &amp; Site Data</string>
    <string name="developer_options_clear_cache_web_content_description">Cached Web Content</string>
    <string name="developer_options_clear_cache">Clear Data</string>
    <string name="developer_options_display_density">Display Density:</string>
    <string name="developer_options_edit">Edit</string>
    <string name="developer_options_save">Save</string>
    <string name="developer_options_show">Show</string>
    <string name="developer_options_display_dpi">Display DPI:</string>
    <string name="developer_options_msaa">MSAA</string>
    <string name="developer_options_msaa_disabled">Disabled</string>
    <string name="developer_options_msaa_2">2x</string>
    <string name="developer_options_msaa_4">4x</string>
    <string name="developer_options_ua_mode">User-Agent Mode</string>
    <string name="security_options_downloads_storage">Downloads Default Storage</string>
    <string name="developer_options_ua_desktop">Desktop</string>
    <string name="developer_options_ua_mobile">Mobile</string>
    <string name="developer_options_ua_vr">VR</string>
    <string name="privacy_options_downloads_storage_internal">Internal</string>
    <string name="privacy_options_downloads_storage_external">External</string>
    <string name="privacy_options_tracking_etp">Standard</string>
    <string name="security_options_permissions_title">Permissions (Allow %1$s to access)</string>
    <string name="security_options_permission_camera">Camera</string>
    <string name="security_options_permission_microphone">Microphone</string>
    <string name="security_options_permission_location">Location</string>
    <string name="security_options_permission_notifications">Notifications</string>
    <string name="security_options_permission_storage">Storage</string>
    <string name="history_empty">Your History is Empty</string>
    <string name="history_description">You can access your browsing history here</string>
    <string name="history_loading">Loading History</string>
    <string name="history_clear">Clear History</string>
    <string name="back_tooltip">Back</string>
    <string name="forward_tooltip">Forward</string>
    <string name="home_tooltip">Home</string>
    <string name="whats_new_tooltip">What’s New</string>
    <string name="tabs_select">Select</string>
    <string name="tabs_select_done">Done</string>
    <string name="tabs_select_all">Select all</string>
    <string name="tabs_close_selected">Close tabs</string>
    <string name="tabs_close_all">Close all</string>
    <string name="tabs_unselect">Unselect all</string>
    <string name="tabs_tray_tooltip">View Tabs</string>
    <string name="hamburger_menu_tooltip">Menu</string>
</resources>