<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/optionsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="30dp"
        >

        <com.igalia.wolvic.ui.widgets.settings.SettingsHeader
            android:id="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helpVisibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/security_options_permissions_title" />

        <!-- ScrollView doesn't support fast scrollbar so we need to use a custom implementation -->
        <com.igalia.wolvic.ui.views.CustomScrollView
            android:id="@+id/scrollbar"
            style="@style/customScrollViewStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:paddingEnd="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.igalia.wolvic.ui.views.settings.SwitchSetting
                    android:id="@+id/cameraPermissionSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    app:on_text="@string/permission_allow"
                    app:off_text="@string/permission_reject"
                    app:description="@string/security_options_permission_camera" />

                <com.igalia.wolvic.ui.views.settings.SwitchSetting
                    android:id="@+id/microphonePermissionSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    app:on_text="@string/permission_allow"
                    app:off_text="@string/permission_reject"
                    app:description="@string/security_options_permission_microphone" />

                <com.igalia.wolvic.ui.views.settings.SwitchSetting
                    android:id="@+id/locationPermissionSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    app:on_text="@string/permission_allow"
                    app:off_text="@string/permission_reject"
                    app:description="@string/security_options_permission_location" />

                <com.igalia.wolvic.ui.views.settings.SwitchSetting
                    android:id="@+id/notificationsPermissionSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:visibility="gone"
                    app:on_text="@string/permission_allow"
                    app:off_text="@string/permission_reject"
                    app:description="@string/security_options_permission_notifications" />

                <com.igalia.wolvic.ui.views.settings.SwitchSetting
                    android:id="@+id/storagePermissionSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    app:on_text="@string/permission_allow"
                    app:off_text="@string/permission_reject"
                    app:description="@string/security_options_permission_storage" />

            </LinearLayout>
        </com.igalia.wolvic.ui.views.CustomScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
